2025-11-26  Richard Frith-M<acdonald  <rfm@gnu.org>

	* Examples/Shell/stshell_tool.m:
	* Frameworks/StepTalk/STConversation.m:
	* Frameworks/StepTalk/STEnvironmentDescription.m:
	* Frameworks/StepTalk/STExterns.h:
	* Frameworks/StepTalk/STExterns.m:
	* Languages/Smalltalk/Externs.m:
	* Languages/Smalltalk/Externs.h:
	* Languages/Smalltalk/GNUmakefile:
	* Languages/Smalltalk/STBlock.m:
	* Languages/Smalltalk/STBytecodeInterpreter.m:
	* Languages/Smalltalk/STBytecodes.m:
	* Languages/Smalltalk/STCompiler.m:
	* Languages/Smalltalk/STGrammar.m:
	* Languages/Smalltalk/STSourceReader.m:
	Remove duplicate global symbols reported by ASAN and fix some
	memory leaks
	* Modules/Foundation/ScriptingInfo.plist:
	Remove bad class (old one which should not have been public)

2020-06-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/GNUmakefile: Specify dependent libraries
	while linking regardless of the target OS.

2018-03-20  Graham Lee  <graham@iamleeg.com>

	* Documentation/HowTo.txt: Document methods that still exist.

	* Frameworks/StepTalk/STEngine.m (engineForLanguageWithName:):
	* Languages/Smalltalk/SmalltalkEngine.m (multiple methods):
	Correct spelling of 'deprecated' in log messages.

2018-02-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix for
	generation of selector types on 64-bit architectures.

2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STEnvironmentDescription.m
	(defaultDescriptionName): Remove redundant method call.

	* Frameworks/StepTalk/STBundleInfo.m (allFrameworkNames,
	pathForFrameworkWithName:):
	* Tools/STExecutor.m (executeScript:withArguments:): Use NULL
	instead of NO where a pointer argument is expected.

	* Frameworks/StepTalk/STConversation.m (knownLanguages,
	interpretScript:):
	* Frameworks/StepTalk/STRemoteConversation.m (interpretScript:):
	* Frameworks/StepTalk/STUndefinedObject.m (release):